--- a/style.css
+++ b/style.css
@@ -169,10 +169,10 @@ a:focus {
 .message {
 	position: absolute;
 	text-align: center;
-	font-weight: bold;
+	font-weight: normal;
 	top: -120px;
 	width: 100%;
-	font-size: 28px;
+	font-size: 25px;
 	padding-top: 15px;
     font-family: 'Anton', sans-serif;
 
