--- a/style.css
+++ b/style.css
@@ -174,6 +174,5 @@ a:focus {
 	width: 100%;
 	font-size: 25px;
 	padding-top: 15px;
-    font-family: 'Anton', sans-serif;
-
+font-family: monospace;
 }
